api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-api
  labels:
    app: monolith-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monolith-api
  template:
    metadata:
      labels:
        app: monolith-api
    spec:
      containers:
        - name: monolith-api
          image: monolith-shop-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
