deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: monolith-api
spec:
  replicas: 2

  selector:
    matchLabels:
      app: monolith-api

  template:
    metadata:
      labels:
        app: monolith-api

    spec:
      serviceAccountName: monolith-api

      containers:
        - name: monolith-api
          image: monolith-shop-api:2.0
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
