monolith-api-current.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"monolith-api","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"monolith-api"}},"template":{"metadata":{"labels":{"app":"monolith-api"}},"spec":{"containers":[{"env":[{"name":"DB_HOST","valueFrom":{"configMapKeyRef":{"key":"DB_HOST","name":"monolith-config"}}},{"name":"DB_PORT","valueFrom":{"configMapKeyRef":{"key":"DB_PORT","name":"monolith-config"}}},{"name":"DB_USER","valueFrom": [...]
  creationTimestamp: "2026-09-28T09:40:44Z"
  generation: 2
  name: monolith-api
  namespace: default
  resourceVersion: "17620"
  uid: af26f6b6-acd2-45de-8aa6-e533496e4116
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: monolith-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: monolith-api
    spec:
      containers:
      - env:
        - name: DB_HOST
          valueFrom:
            configMapKeyRef:
              key: DB_HOST
              name: monolith-config
        - name: DB_PORT
          valueFrom:
            configMapKeyRef:
              key: DB_PORT
              name: monolith-config
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USER
              name: postgres-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: postgres-secret
        - name: DB_NAME
          valueFrom:
            secretKeyRef:
              key: POSTGRES_DB
              name: postgres-secret
        image: monolith-shop-api:1.0
        imagePullPolicy: IfNotPresent
        name: monolith-api
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-09-28T09:40:46Z"
    lastUpdateTime: "2026-09-28T09:40:46Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-09-28T09:40:44Z"
    lastUpdateTime: "2026-09-28T13:07:39Z"
    message: ReplicaSet "monolith-api-566cc9cd6f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 2
  replicas: 2
  terminatingReplicas: 0
  updatedReplicas: 2
