pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: monolith-api
  labels:
    app: monolith-api
spec:
  containers:
    - name: monolith-api
      image: monolith-shop-api:1.0
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 3000
