service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-api-service
spec:
  selector:
    app: monolith-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
