ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolith-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: shop.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: monolith-api-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: monolith-api-service
                port:
                  number: 3000
